--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "haunt.gg-dashboard-clone",
+  "name": "wryft-dashboard",
   "private": true,
   "version": "0.0.0",
   "type": "module",
